feat(schedule): implement ScheduledLesson entity and repository; update LessonMapper and services for scheduled lesson management